--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "recoil": "^0.7.7",
     "styled-components": "^6.1.15",
     "typescript": "^5.8.2",
-    "vite-tsconfig-paths": "^5.1.4"
+    "vite-tsconfig-paths": "^5.1.4",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
